Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-5868

sigar compile errors on Mac OS X 10.8

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 2.0-beta
    • None
    • installer
    • Security Level: Public
    • None

    Description

      I upgraded to OS X 10.8 (the developer GM release; not publicly available for a few weeks) and sigar gets a bunch of compile errors involving system headers.

      I fixed the #includes to stop using the ancient deprecated obsolete 'flat' style (i.e. #include <Gestalt.h> with no parent dir) and that cleared up the problem.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            jens Jens Alfke
            jens Jens Alfke
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty