MB-5868: Obsolete Mac #includes break in OS X 10.8

Stop using the ancient/obsolete 'flat' include style;
i.e. instead of #include <Gestalt.h> include
<CoreServices/CoreServices.h>

Change-Id: I8ab5f067e12a4d017d5a003fdd6b31c396a34985